Absolutely positioned and negative z-index div with canvas child gets drawn with wrong stacking order https://bugs.webkit.org/show_bug.cgi?id=217154

Patch by Rob Buis <rbuis@igalia.com> on 2021-09-02
Reviewed by Simon Fraser.

Source/WebCore:

Keep overlap map accurate.

Test: compositing/subtree-div-overlaps-multiple-negative-z-divs.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::computeCompositingRequirements):

LayoutTests:

Add test based on bug report test case.

* compositing/subtree-div-overlaps-multiple-negative-z-divs-expected.html: Added.
* compositing/subtree-div-overlaps-multiple-negative-z-divs.html: Added.

Canonical link: https://commits.webkit.org/241225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281913 268f45cc-cd09-0410-ab3c-d52691b4dbfc